First FBIS parsing idea