@@ -1,23 +1,19 @@
 package org.FBIS;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.dataformat.xml.XmlMapper;
-import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlElementWrapper;
-import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;
-import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlRootElement;
+import java.io.IOException;
 
-import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
 import org.apache.lucene.document.StringField;
 import org.apache.lucene.document.TextField;
-
-import java.io.IOException;
+import org.jsoup.Jsoup;
+import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
+import org.jsoup.select.Elements;
 
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -28,74 +24,38 @@ public class FBIS {
     private static final List<String> EXCLUDED_FILES = List.of("readmefb.txt", "readchg.txt");
 
     public static void main(String[] args) throws  IOException {
-        XmlMapper mapper = new XmlMapper();
-        mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-        String doc = new StringBuilder().append("<FBISFile>\n").append(Files.readString(Paths.get("files/fbis/fb396003"), StandardCharsets.ISO_8859_1)).append("</FBISFile>\n").toString().replaceAll(" .*?=.*?>", ">");
-        mapper.readValue(doc, FBISFile.class);
-        List <Document> docs = parseFbisFiles("files/fbis");
-        System.out.println("test");
+        List <org.apache.lucene.document.Document> parsedDocs = getFbisFiles("files/fbis");
+        System.out.println(parsedDocs.size());
     }
-
-    public static List<Document> parseFbisFiles(String fbisPath) throws IOException {
-        XmlMapper mapper = new XmlMapper();
-        mapper.configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false);
-        Stream<Path> files = Files.list(Paths.get(fbisPath));
-        List<FBISFile> fixed = files.filter(filePath -> !EXCLUDED_FILES.contains(filePath.getFileName()))
-                .map(FBIS::fixFileStructure)
-                .map(contents -> readValueSafely(contents, mapper))
-                .collect(Collectors.toList());
-
+    public static List<org.apache.lucene.document.Document> getFbisFiles(String fbisFilePath) throws IOException{
+        Stream<Path> files = Files.list(Path.of(fbisFilePath));
         return files
-                .filter(filePath -> !EXCLUDED_FILES.contains(filePath.getFileName()))
-                .map(FBIS::fixFileStructure)
-                .map(contents -> readValueSafely(contents, mapper))
-                .map(FBIS::parseFbisFile)
+                .filter(fileName -> !EXCLUDED_FILES.contains(fileName.getFileName().toString()))
+                .map(FBIS::parseFile)
                 .flatMap(List::stream)
                 .collect(Collectors.toList());
     }
-
-    private static List<Document> parseFbisFile (FBISFile fileToParse) {
-        if(fileToParse.documents != null) {
-            return fileToParse.documents.stream()
-                    .map(FBIS::parseFbisDocument)
-                    .collect(Collectors.toList());
-        } else {
+    private static List<org.apache.lucene.document.Document> parseFile(Path filePath){
+        try {
+            String content = Files.readString(filePath, StandardCharsets.ISO_8859_1);
+            Document parsed = Jsoup.parse(content);
+            Elements docs = parsed.select("DOC");
+            ArrayList<org.apache.lucene.document.Document> parsedDocs = new ArrayList<>();
+            for (Element doc : docs) {
+                org.apache.lucene.document.Document parsedDoc = new org.apache.lucene.document.Document();
+                parsedDoc.add(new StringField("DOCNO", doc.getElementsByTag("DOCNO").text(), Field.Store.YES));
+                parsedDoc.add(new TextField("Text", doc.getElementsByTag("TEXT").text(), Field.Store.YES));
+                parsedDoc.add(new TextField("Date", doc.getElementsByTag("DATE1").text(), Field.Store.YES));
+                parsedDoc.add(new TextField("Header", doc.getElementsByTag("HEADER").text(), Field.Store.YES));
+                parsedDocs.add(parsedDoc);
+            }
+            return parsedDocs;
+        } catch (IOException ex) {
             return Collections.emptyList();
         }
     }
 
-    private static Document parseFbisDocument(FBISDocument doc) {
-        Document resDoc = new Document();
-        resDoc.add(new StringField("index_no", doc.docNo(), Field.Store.YES));
-        resDoc.add(new TextField("date", (String) doc.header().get("DATE1"), Field.Store.YES));
-        resDoc.add(new TextField("text", doc.text(), Field.Store.YES));
-        return resDoc;
-    }
 
-    private static String fixFileStructure (Path filePath){
-        try {
-            String contents = new StringBuilder().append("<FBISFile>\n").append(Files.readString(filePath, StandardCharsets.ISO_8859_1)).append("</FBISFile>\n").toString();
-            return contents.replace(" .*?=.*?>", ">");
-        } catch (IOException ex) {
-            System.out.println(ex);
-            return filePath.getFileName().toString();
-        }
-    }
-
-    private static FBISFile readValueSafely(String contents, XmlMapper mapper) {
-        try {
-            return mapper.readValue(contents, FBISFile.class);
-        } catch (JsonProcessingException ex) {
-            System.out.println(ex);
-            return new FBISFile();
-        }
-    }
 
 }
 
-@JacksonXmlRootElement(localName = "FBISFile")
-class FBISFile {
-    @JacksonXmlProperty(localName = "DOC")
-    @JacksonXmlElementWrapper(useWrapping = false)
-    List<FBISDocument> documents;
-}
